# stopping_LSE

./: .gitignore  LICENSE  README.md  calcHyperParam.py  calc_prob_ineq.py  plot_label.py  pyproject.toml  run_lse_lifetime.py  run_lse_test_func_change_margin.py  run_lse_test_func_change_n_candidates.py  run_lse_test_func_change_noise.py  run_lse_test_func_change_threshold.py  run_lse_test_func_main.py
get_dataset/: get_lifetime_data.py  test_func.py
get_dataset/dataset/lifetime_data/: data3.txt  data4.txt
model/: AcquisitionFunction.py  ClassificationRule.py  LevelSetEstimation.py  stopping_criteria.py
utils/: exp_setting.py  utils.py
