[tool.poetry]
name = "stopping_lse"
version = "0.1.0"
description = ""
authors = ["H_Ishibashi"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
GPy = "^1.13.2"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
scikit-learn = "^1.7.0"
dill = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
